Add Christine's base changes.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,53 @@
         <meta name="description" content="Hello. My name is Ben Inada. I'm a web designer, student, and intern at NASA's Jet Propulsion Laboratory.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- Typekit -->
+        <script type="text/javascript" src="//use.typekit.net/zwa6rbv.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+        <!-- Bootstrap -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+        <!-- Main Stylesheet -->
         <link rel="stylesheet" href="css/compiled.min.css">
+
+        <!-- Modernizr -->
+        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
     </head>
     <body>
 
-        <h1 class="hello">
-            Hello. I'm a bit busy redesigning this site.<br>
-            It should be ready sometime in October 2014.
-        </h1>
+        <div class="intro row">
+            <h1>I build sturdy, long living experiences.</h1>
+        </div>
+        
+        <div class="about-me row">
+            <h1>About Me</h1>
+                <p>     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+                <p>     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo architecto...
+                </p>
+        </div>
+        
+        <div class="works row">
+            <h1>Works</h1>
+        </div>
 
-        <h1 class="check-me-out">
-            For now, feel free to check me out on <a href="https://linkedin.com/in/beninada">LinkedIn</a> and <a href="http://benthegreat.tumblr.com">Tumblr</a>.
-        </h1>
+        <div class="contact-me row">
+            <h1>Contact Me</h1>
+        </div>
 
+        <div class="footer">
+        </div>
+
+        <!-- jQuery -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+
+        <!-- Bootstrap -->
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+        <!-- Google Analytics -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
