Add README and put link to Behance profile in page.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </h1>
 
         <h1 class="check-me-out">
-            For now, feel free to check me out on <a href="https://linkedin.com/in/beninada">LinkedIn</a> and <a href="http://benthegreat.tumblr.com">Tumblr</a>.
+            For now, feel free to check me out on <a href="https://www.behance.net/beninada">Behance</a>, <a href="https://linkedin.com/in/beninada">LinkedIn</a>, and <a href="http://benthegreat.tumblr.com">Tumblr</a>.
         </h1>
 
         <script>
