--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <h1>Works</h1>
         </div>
 
+        <!-- Insert button here -->
+
         <div class="contact-me row">
             <h1>Contact Me</h1>
         </div>
