--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
         <!-- Main Stylesheet -->
         <link rel="stylesheet" href="css/compiled.min.css">
 
-        <!-- Modernizr -->
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-
     </head>
     <body>
 
@@ -56,10 +53,14 @@
 
         <!-- jQuery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
         <!-- Bootstrap -->
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        
+        <!-- Textillate and dependencies -->
+        <script src="js/vendor/textillate/assets/jquery.fittext.js"></script>
+        <script src="js/vendor/textillate/assets/jquery.lettering.js"></script>
+        <script src="js/vendor/textillate/jquery.textillate.js"></script>
 
         <!-- Google Analytics -->
         <script>
