--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
         <!-- Bootstrap -->
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         
-        <!-- Textillate and dependencies -->
-        <script src="js/vendor/textillate/assets/jquery.fittext.js"></script>
-        <script src="js/vendor/textillate/assets/jquery.lettering.js"></script>
-        <script src="js/vendor/textillate/jquery.textillate.js"></script>
+        <!-- Main Script -->
+        <script src="js/compiled.min.js"></script>
 
         <!-- Google Analytics -->
         <script>
