Refactor to use Sass.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,28 @@
     <body>
 
         <div class="intro row">
-            <h1>I build sturdy, long living experiences.</h1>
+            <h1>
+                I build 
+                <ul class="intro-first-adjectives">
+                    <li>sturdy</li>
+                    <li>sturdy</li>
+                    <li>clean</li>
+                </ul>
+                 , 
+                <ul class="intro-second-adjectives">
+                    <li>long-living</li>
+                    <li>tangible</li>
+                    <li>innovative</li>
+                </ul>
+
+                <ul class="intro-nouns">
+                    <li>experiences</li>
+                    <li>interfaces</li>
+                </ul>
+                .
+            </h1>
         </div>
-        
+
         <div class="about-me row">
             <h1>About Me</h1>
                 <p>     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
