Remove need for tittilate.js and dependences. Implement animation of one word.

--- a/index.html
+++ b/index.html
@@ -28,24 +28,7 @@
 
         <div class="intro row">
             <h1>
-                I build 
-                <ul class="intro-first-adjectives">
-                    <li>sturdy</li>
-                    <li>sturdy</li>
-                    <li>clean</li>
-                </ul>
-                 , 
-                <ul class="intro-second-adjectives">
-                    <li>long-living</li>
-                    <li>tangible</li>
-                    <li>innovative</li>
-                </ul>
-
-                <ul class="intro-nouns">
-                    <li>experiences</li>
-                    <li>interfaces</li>
-                </ul>
-                .
+                I build <span class="intro-first-adjective"></span> experiences.
             </h1>
         </div>
 
