Code simplification and animation to last word in intro section.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="intro row">
             <h1>
-                I build <span class="intro-first-adjective"></span> experiences.
+                I build sturdy, long-living <span class="intro-noun"></span>.
             </h1>
         </div>
 
