Build navbar structure and fix issue with .row horizontal length.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,31 @@
     <body>
 
         <div class="intro row">
-            <h1>
-                I build sturdy, long-living <span class="intro-noun"></span>.
-            </h1>
+
+            <nav class="navbar" role="navigation">
+
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-links">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-name" href="#">Ben Inada</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="navbar-links">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">About Me</a></li>
+                        <li><a href="#">Works</a></li>
+                        <li><a href="#">Contact Me</a></li>
+                    </ul>
+                </div>
+
+            </nav>
+
+            <h1>I build sturdy, long-living <span class="intro-noun"></span>.</h1>
+
         </div>
 
         <div class="about-me row">
