Add autoprefixer to Gruntfile. Integrate basic navbar functionality

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <!-- Bootstrap -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
         <!-- Main Stylesheet -->
         <link rel="stylesheet" href="css/compiled.min.css">
 
@@ -33,9 +36,7 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-links">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                        <i class="fa fa-2x fa-bars"></i>
                     </button>
                     <a class="navbar-name" href="#">Ben Inada</a>
                 </div>
