--- a/index.html
+++ b/index.html
@@ -53,18 +53,28 @@
 
             <h1>I build sturdy, long-living <span class="intro-noun"></span>.</h1>
 
+            <div class="triangle"></div>
+
         </div>
 
         <div class="about-me row">
             <h1>About Me</h1>
-                <p>     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                </p>
-                <p>     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo architecto...
-                </p>
+
+            <p>     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+
+            <p>     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo architecto...
+            </p>
+
+            <div class="triangle"></div>
+
         </div>
         
         <div class="works row">
             <h1>Works</h1>
+
+            <div class="triangle"></div>
+            
         </div>
 
         <!-- Insert button here -->
