Build base typography in about section.

--- a/index.html
+++ b/index.html
@@ -60,11 +60,15 @@
         <div class="about-me row">
             <h1>About Me</h1>
 
-            <p>     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            </p>
+            <div class="about-me-paragraphs">
+                <p>
+                    I’m a User Experience Designer at NASA’s Jet Propulsion Laboratory (JPL) and a Computer Science undergrad at UC San Diego. I live in Pasadena, CA, but I’ll be moving back to school in October to complete my degree by June 2015. Learning, making, and spreading good design is my passion.
+                </p>
 
-            <p>     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo architecto...
-            </p>
+                <p>
+                    Although most of my time is spent building the next greatest interfaces for architecting spacecraft missions at JPL, I do delve into my own side projects as well. You can check out the design work that I’ve done for these projects on my Behance portfolio. I am currently an open freelancer, so if you’d like to discuss something I can help you design & build, feel free to send me an email. I’m always open to a chat about User Experience, Usability, Typography, as well as just good design in general.
+                </p>
+            </div>
 
             <div class="triangle"></div>
 
