--- a/index.html
+++ b/index.html
@@ -61,13 +61,18 @@
             <h1>About Me</h1>
 
             <div class="about-me-paragraphs">
+                <input type="checkbox" id="read-more" role="button">
+                <label for="read-more" onclick=""><span>Read more</span><span>Read less</span></label>
+
                 <p>
                     I’m a User Experience Designer at NASA’s Jet Propulsion Laboratory (JPL) and a Computer Science undergrad at UC San Diego. I live in Pasadena, CA, but I’ll be moving back to school in October to complete my degree by June 2015. Learning, making, and spreading good design is my passion.
                 </p>
 
                 <p>
-                    Although most of my time is spent building the next greatest interfaces for architecting spacecraft missions at JPL, I do delve into my own side projects as well. You can check out the design work that I’ve done for these projects on my Behance portfolio. I am currently an open freelancer, so if you’d like to discuss something I can help you design & build, feel free to send me an email. I’m always open to a chat about User Experience, Usability, Typography, as well as just good design in general.
+
+                    Although most of my time is spent building the next greatest interfaces for architecting spacecraft missions at JPL, I do delve into my own side projects as well. You can check out the design work that I’ve done for these projects on my Behance portfolio. <span class="about-me-hidden">I am currently an open freelancer, so if you’d like to discuss something I can help you design &amp; build, feel free to send me an email. I’m always open to a chat about User Experience, Usability, Typography, as well as just good design in general.</span>
                 </p>
+
             </div>
 
             <div class="triangle"></div>
