Add links to about me section.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                 </p>
 
                 <p>
-
-                    Although most of my time is spent building the next greatest interfaces for architecting spacecraft missions at JPL, I do delve into my own side projects as well. You can check out the design work that I’ve done for these projects on my Behance portfolio. <span class="about-me-hidden">I am currently an open freelancer, so if you’d like to discuss something I can help you design &amp; build, feel free to send me an email. I’m always open to a chat about User Experience, Usability, Typography, as well as just good design in general.</span>
+                    Although most of my time is spent building the <a href="https://github.com/Open-MBEE/EMS-Webapp">next greatest interfaces</a> for architecting spacecraft missions at JPL, I do delve into my own side projects as well. You can check out the design work that I’ve done for these projects on my <a href="https://www.behance.net/beninada">Behance portfolio</a>. <span class="about-me-hidden">I am currently an open freelancer, so if you’d like to discuss something I can help you design &amp; build, feel free to <a href="mailto:benjamin.inada@gmail.com">send me an email</a>. I’m always open to a chat about User Experience, Usability, Typography, as well as just good design in general.</span>
                 </p>
 
             </div>
