--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
         <div class="contact-me row">
 
             <h1>Contact Me</h1>
-            
+
+            <div class="form-group">
+                <input id="email" class="form-control" name="email" type="email" placeholder="Your email address *">
+                <textarea id="message" class="form-control" name="message" type="text" rows="5" placeholder="Your message *"></textarea>
+                <button class="btn" type="button" onclick="postContactToGoogle()">Send</button>
+            </div>
+
         </div>
 
         <div class="footer">
