Fix send button in contact section.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="form-group">
                 <input id="email" class="form-control" name="email" type="email" placeholder="Your email address *">
                 <textarea id="message" class="form-control" name="message" type="text" rows="5" placeholder="Your message *"></textarea>
-                <button class="btn-send btn" type="button" onclick="postContactToGoogle()"><i class="fa fa-paper-plane"></i></button>
+                <button class="btn-send btn" type="button" onclick="postContactToGoogle()"><i class="fa fa-lg fa-paper-plane"></i></button>
             </div>
 
         </div>
