Switch divs to sections where appropriate to make markup slightly more semantic.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </head>
     <body>
 
-        <div class="intro row">
+        <section class="intro row">
 
             <nav class="navbar" role="navigation">
 
@@ -55,9 +55,9 @@
 
             <div class="triangle"></div>
 
-        </div>
+        </section>
 
-        <div class="about-me row">
+        <section class="about-me row">
 
             <h1>About Me</h1>
 
@@ -77,19 +77,19 @@
 
             <div class="triangle"></div>
 
-        </div>
+        </section>
         
-        <div class="works row">
+        <section class="works row">
 
             <h1>Works</h1>
 
             <div class="triangle"></div>
             
-        </div>
+        </section>
 
         <!-- Insert button here -->
 
-        <div class="contact-me row">
+        <section class="contact-me row">
 
             <h1>Contact Me</h1>
 
@@ -99,10 +99,10 @@
                 <button class="btn-send btn" type="button" onclick="postContactToGoogle()"><i class="fa fa-lg fa-paper-plane"></i></button>
             </div>
 
-        </div>
+        </section>
 
-        <div class="footer">
-        </div>
+        <footer class="footer">
+        </footer>
 
         <!-- jQuery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
