Implement basic, non-responsive footer.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,19 @@
 
         </section>
 
-        <footer class="footer">
+        <footer>
+            <div class="footer-ownership">
+                © Ben Inada<br>
+                All Rights Reserved
+            </div>
+
+            <ul>
+                <li><a href="https://www.behance.net/beninada"><i class="fa fa-3x fa-behance-square"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/beninada"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
+                <li><a href="https://github.com/beninada"><i class="fa fa-3x fa-github-square"></i></a></li>
+                <li><a href="https://twitter.com/beninada"><i class="fa fa-3x fa-twitter-square"></i></a></li>
+                <li><a href="http://benthegreat.tumblr.com/"><i class="fa fa-3x fa-tumblr-square"></i></a></li>
+            </ul>
         </footer>
 
         <!-- jQuery -->
