Remove "all rights reserved" text in footer.

--- a/index.html
+++ b/index.html
@@ -33,20 +33,24 @@
 
             <nav class="navbar" role="navigation">
 
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-links">
-                        <span class="sr-only">Toggle navigation</span>
-                        <i class="fa fa-2x fa-bars"></i>
-                    </button>
-                    <a class="navbar-name" href="#">Ben Inada</a>
-                </div>
+                <div class="container-fluid">
 
-                <div class="collapse navbar-collapse" id="navbar-links">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">About Me</a></li>
-                        <li><a href="#">Works</a></li>
-                        <li><a href="#">Contact Me</a></li>
-                    </ul>
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-links">
+                            <span class="sr-only">Toggle navigation</span>
+                            <i class="fa fa-2x fa-bars"></i>
+                        </button>
+                        <a class="navbar-name" href="#">Ben Inada</a>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="navbar-links">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#">About Me</a></li>
+                            <li><a href="#">Works</a></li>
+                            <li><a href="#">Contact Me</a></li>
+                        </ul>
+                    </div>
+
                 </div>
 
             </nav>
@@ -101,19 +105,20 @@
 
         </section>
 
-        <footer>
-            <div class="footer-ownership">
-                © Ben Inada<br>
-                All Rights Reserved
+        <footer class="row">
+
+            <div class="container">
+
+                <ul class="col-xs-12">
+                    <li><a href="https://www.behance.net/beninada"><i class="fa fa-3x fa-behance-square"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/beninada"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
+                    <li><a href="https://github.com/beninada"><i class="fa fa-3x fa-github-square"></i></a></li>
+                    <li><a href="https://twitter.com/beninada"><i class="fa fa-3x fa-twitter-square"></i></a></li>
+                    <li><a href="http://benthegreat.tumblr.com/"><i class="fa fa-3x fa-tumblr-square"></i></a></li>
+                </ul>
+
             </div>
 
-            <ul>
-                <li><a href="https://www.behance.net/beninada"><i class="fa fa-3x fa-behance-square"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/beninada"><i class="fa fa-3x fa-linkedin-square"></i></a></li>
-                <li><a href="https://github.com/beninada"><i class="fa fa-3x fa-github-square"></i></a></li>
-                <li><a href="https://twitter.com/beninada"><i class="fa fa-3x fa-twitter-square"></i></a></li>
-                <li><a href="http://benthegreat.tumblr.com/"><i class="fa fa-3x fa-tumblr-square"></i></a></li>
-            </ul>
         </footer>
 
         <!-- jQuery -->
