--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <nav class="navbar" role="navigation">
 
-                <div class="container-fluid">
+                <div class="container">
 
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-links">
