--- a/index.html
+++ b/index.html
@@ -89,23 +89,47 @@
 
             <div class="container">
 
-                <img src="assets/logo-nasa.png" alt="NASA">
+                <div class="nasa row">
 
-                <p>
-                    OpenMBEE (Open Model-based Engineering Environment) is a suite of web and mobile apps that is revolutionizing the way spacecraft are built. My responsibilities in leading UX Design in OpenMBEE include performing user research, defining OpenMBEE's visual language, and using HTML5, CSS3, and AngularJS to build the designs I prototype in Photoshop. Check out my work on Github.
-                </p>
+                    <div class="logo col-xs-4">
+                        <img src="assets/logo-nasa.png" alt="NASA">
+                    </div>
 
-                <img src="assets/logo-626.png" alt="626">
+                    <div class="col-xs-8">
+                        <p>
+                            OpenMBEE (Open Model-based Engineering Environment) is a suite of web and mobile apps that is revolutionizing the way spacecraft are built. My responsibilities in leading UX Design in OpenMBEE include performing user research, defining OpenMBEE's visual language, and using HTML5, CSS3, and AngularJS to build the designs I prototype in Photoshop. Check out my work on Github.
+                        </p>
+                    </div>
 
-                <p>
-                    I’m currently a mentor to Dylan Grecius, a talented web developer and designer at Clark Magnet High School in Glendale, CA. With my experience in User Experience  Design and Agile Web Development, I provide Dylan both the design and development direction he needs to advance his senior project. What’s 696, you say? It’s the robotics club Dylan is a part of. This kid’s smart.
-                </p>
+                </div>
 
-                <img src="assets/logo-state-farm.png" alt="State Farm">
+                <div class="dylan row">
 
-                <p>
-                    I didn’t do much design work for State Farm at all. However, a knack for good design is what made me a great fit for the role of Agent Staff. With a background in User Experience, I was able to conduct effective customer research and provide hand-crafted solutions to problems at warp speed. My current clients reap the benefits of this skillset daily.
-                </p>
+                    <div class="logo col-xs-4">
+                        <img src="assets/logo-626.png" alt="626">
+                    </div>
+
+                    <div class="col-xs-8">
+                        <p>
+                            I’m currently a mentor to Dylan Grecius, a talented web developer and designer at Clark Magnet High School in Glendale, CA. With my experience in User Experience  Design and Agile Web Development, I provide Dylan both the design and development direction he needs to advance his senior project. What’s 696, you say? It’s the robotics club Dylan is a part of. This kid’s smart.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="state-farm row">
+
+                    <div class="logo col-xs-4">
+                        <img src="assets/logo-state-farm.png" alt="State Farm">
+                    </div>
+
+                    <div class="col-xs-8">
+                        <p>
+                            I didn’t do much design work for State Farm at all. However, a knack for good design is what made me a great fit for the role of Agent Staff. With a background in User Experience, I was able to conduct effective customer research and provide hand-crafted solutions to problems at warp speed. My current clients reap the benefits of this skillset daily.
+                        </p>
+                    </div>
+
+                </div>
 
             </div>
 
