--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 
                 <div class="nasa row">
 
-                    <div class="logo col-xs-4">
+                    <div class="container-logo col-xs-12 col-md-4 col-lg-4">
                         <img src="assets/logo-nasa.png" alt="NASA">
                     </div>
 
-                    <div class="col-xs-8">
+                    <div class="container-description col-xs-12 col-md-8 col-lg-8">
                         <p>
                             OpenMBEE (Open Model-based Engineering Environment) is a suite of web and mobile apps that is revolutionizing the way spacecraft are built. My responsibilities in leading UX Design in OpenMBEE include performing user research, defining OpenMBEE's visual language, and using HTML5, CSS3, and AngularJS to build the designs I prototype in Photoshop. Check out my work on Github.
                         </p>
@@ -105,11 +105,11 @@
 
                 <div class="dylan row">
 
-                    <div class="logo col-xs-4">
+                    <div class="container-logo col-xs-12 col-md-4 col-lg-4">
                         <img src="assets/logo-626.png" alt="626">
                     </div>
 
-                    <div class="col-xs-8">
+                    <div class="container-description col-xs-12 col-md-8 col-lg-8">
                         <p>
                             I’m currently a mentor to Dylan Grecius, a talented web developer and designer at Clark Magnet High School in Glendale, CA. With my experience in User Experience  Design and Agile Web Development, I provide Dylan both the design and development direction he needs to advance his senior project. What’s 696, you say? It’s the robotics club Dylan is a part of. This kid’s smart.
                         </p>
@@ -119,11 +119,11 @@
 
                 <div class="state-farm row">
 
-                    <div class="logo col-xs-4">
+                    <div class="container-logo col-xs-12 col-md-4 col-lg-4">
                         <img src="assets/logo-state-farm.png" alt="State Farm">
                     </div>
 
-                    <div class="col-xs-8">
+                    <div class="container-description col-xs-12 col-md-8 col-lg-8">
                         <p>
                             I didn’t do much design work for State Farm at all. However, a knack for good design is what made me a great fit for the role of Agent Staff. With a background in User Experience, I was able to conduct effective customer research and provide hand-crafted solutions to problems at warp speed. My current clients reap the benefits of this skillset daily.
                         </p>
