--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
                     <div class="collapse navbar-collapse" id="navbar-links">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">About Me</a></li>
-                            <li><a href="#">Works</a></li>
-                            <li><a href="#">Contact Me</a></li>
+                            <li><a href="#about">About Me</a></li>
+                            <li><a href="#works">Works</a></li>
+                            <li><a href="#contact">Contact Me</a></li>
                         </ul>
                     </div>
 
@@ -61,7 +61,7 @@
 
         </section>
 
-        <section class="about-me row">
+        <section class="about-me row" id="about">
 
             <h1>About Me</h1>
 
@@ -83,7 +83,7 @@
 
         </section>
         
-        <section class="works row">
+        <section class="works row" id="works">
 
             <h1>Works</h1>
 
@@ -97,7 +97,7 @@
 
                     <div class="container-description col-xs-12 col-md-8 col-lg-8">
                         <p>
-                            OpenMBEE (Open Model-based Engineering Environment) is a suite of web and mobile apps that is revolutionizing the way spacecraft are built. My responsibilities in leading UX Design in OpenMBEE include performing user research, defining OpenMBEE's visual language, and using HTML5, CSS3, and AngularJS to build the designs I prototype in Photoshop. Check out my work on Github.
+                            OpenMBEE (Open Model-based Engineering Environment) is a suite of web and mobile apps that is revolutionizing the way spacecraft are built. My responsibilities in leading UX Design in OpenMBEE include performing user research, defining OpenMBEE's visual language, and using HTML5, CSS3, and AngularJS to build the designs I prototype in Photoshop. Check out my work on <a href="https://github.com/beninada">Github</a>.
                         </p>
                     </div>
 
@@ -111,7 +111,7 @@
 
                     <div class="container-description col-xs-12 col-md-8 col-lg-8">
                         <p>
-                            I’m currently a mentor to Dylan Grecius, a talented web developer and designer at Clark Magnet High School in Glendale, CA. With my experience in User Experience  Design and Agile Web Development, I provide Dylan both the design and development direction he needs to advance his senior project. What’s 696, you say? It’s the robotics club Dylan is a part of. This kid’s smart.
+                            I’m currently a mentor to Dylan Grecius, a talented web developer and designer at Clark Magnet High School in Glendale, CA. With my experience in User Experience  Design and Agile Web Development, I provide Dylan both the design and development direction he needs to advance his senior project. What’s 696, you say? It’s the <a href="http://www.team696.org">robotics club</a> Dylan is a part of. <a href="">This</a> kid’s smart.
                         </p>
                     </div>
 
@@ -131,7 +131,12 @@
 
                 </div>
 
+                <p class="resume row">
+                    Oh, into resumes? Check <a href="https://drive.google.com/file/d/0Bwh7_7ff3e9tTkNSeEd5NXpVX1k/edit?usp=sharing">mine</a> out.
+                </p>
+
             </div>
+
 
             <div class="triangle"></div>
             
@@ -139,7 +144,7 @@
 
         <!-- Insert button here -->
 
-        <section class="contact-me row">
+        <section class="contact-me row" id="contact">
 
             <h1>Contact Me</h1>
 
