Nav links turn into icons when screen is at width 767px.

--- a/index.html
+++ b/index.html
@@ -36,19 +36,21 @@
                 <div class="container">
 
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-links">
-                            <span class="sr-only">Toggle navigation</span>
-                            <i class="fa fa-2x fa-bars"></i>
-                        </button>
-                        <a class="navbar-name" href="#">Ben Inada</a>
-                    </div>
 
-                    <div class="collapse navbar-collapse" id="navbar-links">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#about">About Me</a></li>
-                            <li><a href="#works">Works</a></li>
-                            <li><a href="#contact">Contact Me</a></li>
+                        <a class="navbar-name" href="#">Ben Inada</a>
+
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="#about"><span>About Me</span><i class="fa fa-child" href="#about"></i></a>
+                            </li>
+                            <li>
+                                <a href="#works"><span>Works</span><i class="fa fa-briefcase" href="#works"></i></a>
+                            </li>
+                            <li>
+                                <a href="#contact"><span>Contact Me</span><i class="fa fa-envelope" href="#contact"></i></a>
+                            </li>
                         </ul>
+
                     </div>
 
                 </div>
