Implement thanks on .btn-send click.

--- a/index.html
+++ b/index.html
@@ -144,16 +144,18 @@
             
         </section>
 
-        <!-- Insert button here -->
-
         <section class="contact-me row" id="contact">
 
             <h1>Contact Me</h1>
 
             <div class="form-group">
+
                 <input id="email" class="form-control" name="email" type="email" placeholder="Your email address *">
+
                 <textarea id="message" class="form-control" name="message" type="text" rows="5" placeholder="Your message *"></textarea>
-                <button class="btn-send btn" type="button" onclick="postContactToGoogle()"><i class="fa fa-lg fa-paper-plane"></i></button>
+
+                <button class="btn-send btn" type="button" onclick="postContact()"><i class="fa fa-lg fa-paper-plane"></i><span>Thanks! We'll be in touch.</span></button>
+
             </div>
 
         </section>
