--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <script type="text/javascript" src="//use.typekit.net/zwa6rbv.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="assets/favicon.ico?v=2">
+
         <!-- Bootstrap -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
