Remove dummy link to Dylan's LinkedIn.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                     <div class="container-description col-xs-12 col-md-8 col-lg-8">
                         <p>
-                            I’m currently a mentor to Dylan Grecius, a talented web developer and designer at Clark Magnet High School in Glendale, CA. With my experience in User Experience  Design and Agile Web Development, I provide Dylan both the design and development direction he needs to advance his senior project. What’s 696, you say? It’s the <a href="http://www.team696.org">robotics club</a> Dylan is a part of. <a href="">This</a> kid’s smart.
+                            I’m currently a mentor to Dylan Grecius, a talented web developer and designer at Clark Magnet High School in Glendale, CA. With my experience in User Experience  Design and Agile Web Development, I provide Dylan both the design and development direction he needs to advance his senior project. What’s 696, you say? It’s the <a href="http://www.team696.org">robotics club</a> Dylan is a part of. This kid’s smart.
                         </p>
                     </div>
 
