Increase section title modularity.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             </nav>
 
-            <h1>I build sturdy, long-living <span class="intro-noun"></span>.</h1>
+            <h1 class="intro-main-heading">I build sturdy, long-living <span class="intro-noun"></span>.</h1>
 
             <div class="triangle"></div>
 
@@ -65,7 +65,7 @@
 
         <section class="about-me row" id="about">
 
-            <h1>About Me</h1>
+            <h1 class="section-title">About Me</h1>
 
             <div class="about-me-paragraphs">
                 <input type="checkbox" id="read-more" role="button">
@@ -87,7 +87,7 @@
         
         <section class="works row" id="works">
 
-            <h1>Works</h1>
+            <h1 class="section-title">Works</h1>
 
             <div class="container">
 
@@ -146,7 +146,7 @@
 
         <section class="contact-me row" id="contact">
 
-            <h1>Contact Me</h1>
+            <h1 class="section-title">Contact Me</h1>
 
             <div class="form-group">
 
