--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
+
     <head>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>Ben Inada</title>
+        <meta name="description" content="Hello. My name is Ben Inada. I'm a UX designer, student, and intern at NASA's Jet Propulsion Laboratory.">
 
-        <meta name="description" content="Hello. My name is Ben Inada. I'm a web designer, student, and intern at NASA's Jet Propulsion Laboratory.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Ben Inada</title>
 
         <!-- Typekit -->
         <script type="text/javascript" src="//use.typekit.net/zwa6rbv.js"></script>
@@ -27,6 +26,7 @@
         <link rel="stylesheet" href="css/compiled.min.css">
 
     </head>
+
     <body>
 
         <section class="intro row">
@@ -72,11 +72,11 @@
                 <label for="read-more" onclick=""><span>Read more</span><span>Read less</span></label>
 
                 <p>
-                    I’m a User Experience Designer at NASA’s Jet Propulsion Laboratory (JPL) and a Computer Science undergrad at UC San Diego. I live in Pasadena, CA, but I’ll be moving back to school in October to complete my degree by June 2015. Learning, making, and spreading good design is my passion.
+                    I’m a User Experience Designer at NASA’s Jet Propulsion Laboratory (JPL) and a Computer Science undergrad at UC San Diego in La Jolla, CA. I plan to complete my degree by June 2015 while contributing to other projects as time permits.
                 </p>
 
                 <p>
-                    Although most of my time is spent building the <a href="https://github.com/Open-MBEE/EMS-Webapp">next greatest interfaces</a> for architecting spacecraft missions at JPL, I do delve into my own side projects as well. You can check out the design work that I’ve done for these projects on my <a href="https://www.behance.net/beninada">Behance portfolio</a>. <span class="about-me-hidden">I am currently an open freelancer, so if you’d like to discuss something I can help you design &amp; build, feel free to <a href="mailto:benjamin.inada@gmail.com">send me an email</a>. I’m always open to a chat about User Experience, Usability, Typography, as well as just good design in general.</span>
+                    Spreading good design is my passion. Although most of my time is spent building the <a href="https://github.com/Open-MBEE/EMS-Webapp">next greatest interfaces</a> for the design &amp; architecture of spacecraft missions at JPL, I delve deeply into other projects as well. You can check out the design work that I’ve done for these projects on my <a href="https://www.behance.net/beninada">Behance portfolio</a>. <span class="about-me-hidden">I am currently open to taking on freelance work, so if you’d like to discuss something that I can help you design &amp; build, feel free to <a href="#contact">send me an email</a>. I’m always open to a chat about User Experience, Usability, Typography, and just good design as well.</span>
                 </p>
 
             </div>
@@ -127,14 +127,14 @@
 
                     <div class="container-description col-xs-12 col-md-8 col-lg-8">
                         <p>
-                            I didn’t do much design work for State Farm at all. However, a knack for good design is what made me a great fit for the role of Agent Staff. With a background in User Experience, I was able to conduct effective customer research and provide hand-crafted solutions to problems at warp speed. My current clients reap the benefits of this skillset daily.
+                            I didn’t do much design work for State Farm. However, a knack for good design is what made me a great fit for the role of Agent Staff. With a background in User Experience, I was able to conduct effective customer research and provide hand-crafted solutions to problems at warp speed. My current clients reap the benefits of this skillset daily.
                         </p>
                     </div>
 
                 </div>
 
                 <p class="resume row">
-                    Oh, into resumes? Check <a href="https://drive.google.com/file/d/0Bwh7_7ff3e9tTkNSeEd5NXpVX1k/edit?usp=sharing">mine</a> out.
+                    Prefer a resume? Check <a href="https://drive.google.com/file/d/0Bwh7_7ff3e9tTkNSeEd5NXpVX1k/edit?usp=sharing">mine</a> out.
                 </p>
 
             </div>
@@ -196,4 +196,5 @@
         <script src="js/compiled.min.js"></script>
 
     </body>
+
 </html>
