--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
 
                 <p class="resume row">
-                    Oh, into resumes? Check <a href="https://drive.google.com/file/d/0Bwh7_7ff3e9tTkNSeEd5NXpVX1k/edit?usp=sharing">mine</a> out.
+                    Prefer a resume? Check <a href="https://drive.google.com/file/d/0Bwh7_7ff3e9tZTBKT0VTQzNNMUE/view?usp=sharing">mine</a> out.
                 </p>
 
             </div>
