--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="#about"><span>About Me</span><i class="fa fa-child" href="#about"></i></a>
+                                <a data-scroll href="#about"><span>About Me</span><i class="fa fa-child" href="#about"></i></a>
                             </li>
                             <li>
-                                <a href="#works"><span>Works</span><i class="fa fa-briefcase" href="#works"></i></a>
+                                <a data-scroll href="#works"><span>Works</span><i class="fa fa-briefcase" href="#works"></i></a>
                             </li>
                             <li>
-                                <a href="#contact"><span>Contact Me</span><i class="fa fa-envelope" href="#contact"></i></a>
+                                <a data-scroll href="#contact"><span>Contact Me</span><i class="fa fa-envelope" href="#contact"></i></a>
                             </li>
                         </ul>
 
@@ -57,7 +57,7 @@
 
             </nav>
 
-            <h1 class="intro-main-heading">I build sturdy, long-living <span class="intro-noun"></span>.</h1>
+            <h1 class="intro-main-heading">I build sturdy, long-living <span class="intro-noun"></span></h1>
 
             <div class="triangle"></div>
 
@@ -192,6 +192,10 @@
             ga('create','UA-54518434-1');ga('send','pageview');
         </script>
         
+        <!-- Smooth Scroll and dependencies -->
+        <script src="bower_components/smooth-scroll/dist/js/bind-polyfill.min.js"></script>
+        <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
+
         <!-- Main Script -->
         <script src="js/compiled.min.js"></script>
 
