Add smooth scroll to "send me an email".

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </p>
 
                 <p>
-                    Spreading good design is my passion. Although most of my time is spent building the <a href="https://github.com/Open-MBEE/EMS-Webapp">next greatest interfaces</a> for the design &amp; architecture of spacecraft missions at JPL, I delve deeply into other projects as well. You can check out the design work that I’ve done for these projects on my <a href="https://www.behance.net/beninada">Behance portfolio</a>. <span class="about-me-hidden">I am currently open to taking on freelance work, so if you’d like to discuss something that I can help you design &amp; build, feel free to <a href="#contact">send me an email</a>. I’m always open to a chat about User Experience, Usability, Typography, and just good design as well.</span>
+                    Spreading good design is my passion. Although most of my time is spent building the <a href="https://github.com/Open-MBEE/EMS-Webapp">next greatest interfaces</a> for the design &amp; architecture of spacecraft missions at JPL, I delve deeply into other projects as well. You can check out the design work that I’ve done for these projects on my <a href="https://www.behance.net/beninada">Behance portfolio</a>. <span class="about-me-hidden">I am currently open to taking on freelance work, so if you’d like to discuss something that I can help you design &amp; build, feel free to <a data-scroll href="#contact">send me an email</a>. I’m always open to a chat about User Experience, Usability, Typography, and just good design as well.</span>
                 </p>
 
             </div>
