--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 <label for="read-more" onclick=""><span>Read more</span><span>Read less</span></label>
 
                 <p>
-                    I’m a User Experience Designer at NASA’s Jet Propulsion Laboratory (JPL) and a Computer Science undergrad at UC San Diego in La Jolla, CA. I plan to complete my degree by June 2015 while contributing to other projects as time permits.
+                    I’m a User Experience Designer at NASA’s Jet Propulsion Laboratory, who loves making things and breaking things. I create functional experiences guided by user-centric design thought. Current residence: the traffic-engourged city of Pasadena, CA.
                 </p>
 
                 <p>
-                    Spreading good design is my passion. Although most of my time is spent building the <a href="https://github.com/Open-MBEE/EMS-Webapp">next greatest interfaces</a> for the design &amp; architecture of spacecraft missions at JPL, I delve deeply into other projects as well. You can check out the design work that I’ve done for these projects on my <a href="https://www.behance.net/beninada">Behance portfolio</a>. <span class="about-me-hidden">I am currently open to taking on freelance work, so if you’d like to discuss something that I can help you design &amp; build, feel free to <a data-scroll href="#contact">send me an email</a>. I’m always open to a chat about User Experience, Usability, Typography, and just good design as well.</span>
+                    Spreading good design is my passion. Although most of my time is spent building the <a href="https://github.com/Open-MBEE/EMS-Webapp">next greatest interfaces</a> for the design &amp; architecture of spacecraft missions at JPL, I delve deeply into other projects as well. You can check out the design work that I’ve done for these projects on my <a href="https://www.behance.net/beninada">Behance portfolio</a>. <span class="about-me-hidden">I'm always open to taking on new side projects, so if you’d like to discuss something that I can help you design &amp; build, feel free to <a data-scroll href="#contact">send me an email</a>. I’m always open to a chat about User Experience, Usability, Typography, and just good design as well.</span>
                 </p>
 
             </div>
