Update About Me and meta description.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <meta name="description" content="Hello. My name is Ben Inada. I'm a UX designer, student, and intern at NASA's Jet Propulsion Laboratory.">
+        <meta name="description" content="Hello. My name is Ben Inada. I'm an Interaction Designer at NASA's Jet Propulsion Laboratory.">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -72,7 +72,7 @@
                 <label for="read-more" onclick=""><span>Read more</span><span>Read less</span></label>
 
                 <p>
-                    I’m a User Experience Designer at NASA’s Jet Propulsion Laboratory, who loves making things and breaking things. I create functional experiences guided by user-centric design thought. Current residence: the traffic-engourged city of Pasadena, CA.
+                    I’m an Interaction Designer at NASA’s Jet Propulsion Laboratory, who loves making things that are distinctly useful. I create functional experiences guided by user-centered design thought. Current residence: the traffic-engourged city of Pasadena, CA.
                 </p>
 
                 <p>
