--- a/index.html
+++ b/index.html
@@ -10,50 +10,67 @@
 
         <title>Ben Inada</title>
 
-        <link rel="shortcut icon" href="assets/favicon.ico?v=2">
+        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
+        <link rel="shortcut icon" href="assets/favicon.ico?v=2">
 
     </head>
 
     <body class="grid wider wrap">
 
-        <div class="unit pre-one-fifth one-third">
-            Ben Inada
-        </div>
+        <section class="summary">
 
-        <div class="unit pre-one-third half">
-            Interaction Designer at NASA’s Jet Propulsion Laboratory in sunny Pasadena, CA. Member of IxDA. Studied at UC San Diego.
-        </div>
+            <div class="unit pre-one-tenth half">
+                Ben Inada
+            </div>
 
-        <div class="unit pre-one-fifth one-third">
-            Hats
-        </div>
+            <div class="unit pre-one-quarter three-fifths">
+                Interaction Designer at NASA JPL in Pasadena, CA. Member of IxDA. Studied at UC San Diego.
+            </div>
 
-        <div class="unit pre-one-third half">
-            Interaction Design</br>
-            User Research</br>
-            Information Architecture</br>
-            Visual Design</br>
-        </div>
+        </section>
 
-        <div class="unit pre-one-fifth one-third">
-            Current Projects
-        </div>
+        <section class="hats">
 
-        <div class="unit pre-one-third half">
-            Minnow, MBEE, and a tool that should make prototyping easier for all of us. Stay tuned!
-        </div>
+            <div class="unit pre-one-tenth half">
+                Hats
+            </div>
 
+            <div class="unit pre-one-quarter three-fifths">
+                Interaction Design<br>
+                User Research<br>
+                Information Architecture<br>
+                Visual Design<br>
+            </div>
 
-        <div class="unit pre-one-fifth one-third">
-            Contact
-        </div>
+        </section>
 
-        <div class="unit pre-one-third half">
-            Twitter, LinkedIn, Tumblr, Pinterest, Facebook</br></br>
-            me@beninada.com</br>
-            +1 310 781 0393</br>
-        </div>
+        <section class="projects">
+
+            <div class="unit pre-one-tenth half">
+                Projects
+            </div>
+
+            <div class="unit pre-one-quarter three-fifths">
+                <a href="https://www.behance.net/gallery/28586535/Minnow">Minnow</a>, <a href="https://github.com/Open-MBEE">OpenMBEE</a>, and a tool that should make prototyping easier for all of us. Stay tuned!<br><br>
+                More <a href="https://www.behance.net/beninada">here</a>, if you&rsquo;re interested.
+            </div>
+
+        </section>
+
+        <section class="contact">
+
+            <div class="unit pre-one-tenth half">
+                Contact
+            </div>
+
+            <div class="unit pre-one-quarter three-fifths">
+                <a href="https://www.behance.net/beninada">Behance</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="http://benthegreat.tumblr.com/">Tumblr</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a>, <a href="https://www.facebook.com/bendaddy">Facebook</a><br><br>
+                <a href="mailto:me@beninada.com">me@beninada.com</a><br>
+                +1 310 781 0393<br>
+            </div>
+
+        </section>
 
         <!-- Google Analytics -->
 <!--         <script>
