--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="Hello, I'm Ben Inada. I'm an Interaction Designer at NASA's Jet Propulsion Laboratory.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Ben Inada is an Interaction Designer at NASA JPL who daydreams about IxD, User Research, Information Architecture, and Visual Design.">
 
-        <title>Ben Inada</title>
+        <title>Ben Inada - Interaction Designer</title>
 
         <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
@@ -24,7 +24,7 @@
                 Ben Inada
             </div>
 
-            <div class="unit pre-one-quarter three-fifths">
+            <div class="unit pre-one-fourth three-fifths">
                 Interaction Designer at NASA JPL in Pasadena, CA. Member of IxDA. Studied at UC San Diego.
             </div>
 
@@ -36,7 +36,7 @@
                 Hats
             </div>
 
-            <div class="unit pre-one-quarter three-fifths">
+            <div class="unit pre-one-fourth three-fifths">
                 Interaction Design<br>
                 User Research<br>
                 Information Architecture<br>
@@ -51,7 +51,7 @@
                 Projects
             </div>
 
-            <div class="unit pre-one-quarter three-fifths">
+            <div class="unit pre-one-fourth three-fifths">
                 <a href="https://www.behance.net/gallery/28586535/Minnow">Minnow</a>, <a href="https://github.com/Open-MBEE">OpenMBEE</a>, and a tool that should make prototyping easier for all of us. Stay tuned!<br><br>
                 More <a href="https://www.behance.net/beninada">here</a>, if you&rsquo;re interested.
             </div>
@@ -64,7 +64,7 @@
                 Contact
             </div>
 
-            <div class="unit pre-one-quarter three-fifths">
+            <div class="unit pre-one-fourth three-fifths">
                 <a href="https://www.behance.net/beninada">Behance</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="http://benthegreat.tumblr.com/">Tumblr</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a>, <a href="https://www.facebook.com/bendaddy">Facebook</a><br><br>
                 <a href="mailto:me@beninada.com">me@beninada.com</a><br>
                 +1 310 781 0393<br>
@@ -81,9 +81,6 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-54518434-1');ga('send','pageview');
         </script> -->
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="js/minified.min.js"></script>
 
     </body>
 
