--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Interaction Designer at NASA JPL in Pasadena, CA. Member of IxDA. Studied at UC San Diego.
+                Interaction Designer at NASA JPL in Pasadena, CA. IxDA and UXPA Member. Aspiring Pilot. UC San Diego Alumnus.
             </div>
 
         </section>
