--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Ben Inada is an Interaction Designer at NASA JPL who daydreams about IxD, UX, User Research, Information Architecture, and Visual Design.">
+        <meta name="description" content="Ben Inada is an Interaction Designer at NASA JPL.">
 
         <title>Ben Inada - Interaction Designer</title>
 
@@ -25,7 +25,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Interaction Designer at NASA JPL in Pasadena, CA. IxDA and UXPA Member. Aspiring Pilot. UC San Diego Alumnus.
+                Interaction Designer at NASA JPL in Pasadena, CA. IxDA and UXPA Member. Electronic Music Producer. Student Pilot. UC San Diego Alumnus.
             </div>
 
         </section>
@@ -37,10 +37,10 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Interaction Design<br>
-                User Research<br>
-                Information Architecture<br>
-                Visual Design<br>
+                Human-centered Design<br>
+                Human Factors<br>
+                Design Thinking<br>
+                Systems Engineering<br>
             </div>
 
         </section>
