--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Ben Inada is an Interaction Designer at NASA JPL.">
 
-        <title>Ben Inada - Interaction Designer</title>
+        <title>Ben Inada - Designer / Developer</title>
 
         <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
@@ -25,7 +25,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Interaction Designer at NASA JPL in Pasadena, CA. IxDA and UXPA Member. Electronic Music Producer. Student Pilot. UC San Diego Alumnus.
+                Web Designer &amp; Developer Los Angeles, CA. IxDA and UXPA Member. Electronic Music Producer. Pilot. Backpacker. UC San Diego Alumnus.
             </div>
 
         </section>
@@ -37,9 +37,9 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Human-centered Design<br>
-                Human Factors<br>
+                Front End Development<br>
                 Design Thinking<br>
+                Entrepreneurship<br>
                 Systems Engineering<br>
             </div>
 
@@ -65,9 +65,9 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                <a href="https://www.behance.net/beninada">Behance</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="http://benthegreat.tumblr.com/">Tumblr</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a>, <a href="https://www.facebook.com/bendaddy">Facebook</a><br><br>
+                <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="http://benthegreat.tumblr.com/">Tumblr</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a><br><br>
                 <a href="mailto:me@beninada.com">me@beninada.com</a><br>
-                +1 310 781 0393<br>
+                +1 213 700 8159<br>
             </div>
 
         </section>
